css/style.css
/* ... */
.date_cua {
     position: absolute;
     width: 29px;
     height: 29px;
     top: 48px;
     background-repeat: no-repeat;
     right: 30px;
}

.book_btn {
     background-color: var(--high-blue);
     max-width: 189px;
     width: 100%;
     margin: 0 auto;
     padding: 10px 0;
     border-radius: 50px;
     color: #647E6899;
     font-size: 20px;
     transition: ease-in 0.5s;
     display: block;
}

.book_btn:hover {
     background-color: #647E6899;
     color: var(--high-blue);
     transition: ease-in 0.5s;
}

.carousel-control-next,
.carousel-control-prev {
     display: none;
}

.carousel-indicators {
     right: inherit;
     bottom: 53px;
     margin-left: 9%;
     z-index: 9;
}


/** end banner section **/

.titlepage {
     text-align: center;
     padding-bottom: 40px;
}

.titlepage h2 {
     font-size: 25px;
     color: var(--high-blue);
     line-height: 45px;
     font-weight: bold;
     text-transform: uppercase;
     padding: 0;
}

.titlepage h2::before {
     position: absolute;
     content: "";
     background-color: var(--high-blue);
     width: 20px;
     height: 4px;
     transform: rotate(-36deg);
     margin-left: -10px;
}

.titlepage h2::after {
     position: absolute;
     content: "";
     background-color: var(--high-blue);
     width: 20px;
     height: 4px;
     transform: rotate(-36deg);
     bottom: 5px;
}

.d_flex {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
}

.read_more {
     font-size: 17px;
     background-color: #121212;
     color: #647E6899;
     padding: 8px 0px;
     width: 100%;
     max-width: 144px;
     text-align: center;
     display: inline-block;
     transition: ease-in all 0.5s;
     font-weight: 500;
     border-radius: 30px;
}

.read_more:hover {
     background: var(--high-blue);
     color: #647E6899;
     transition: ease-in all 0.5s;
}

/** about section **/

.about {
     background-color: #D8D8D8;
     padding: 50px 0px 20px 0px;
}

.about .titlepage {
     text-align: center;
     padding-bottom: 0;
     width: 100%;
}

/* .about .titlepage h2 {
     margin-bottom: 35px;
} */

.about .titlepage p {
     font-weight: 400;
     font-size: 17px;
     line-height: 28px;
     text-align: right;
     white-space: break-spaces;
     color: var(--high-blue);
}

.about_img {
     margin-right: 40px;
     overflow: hidden;
}

.about_img figure {
     margin: 0;
}

.about_img figure img {
     width: 100%;
     transition: all .5s;
}

.about_img figure img:hover {
     transform: scale(1.2);
}

/** end about section **/

/** our_room section **/

.our_room {
     background-color: #647E6899;
     padding: 50px 0px;
}

.our_room .titlepage {
     text-align: center;
}

.our_room .titlepage p {
     color: #121212;
     font-size: 17px;
     margin-top: 20px;
}

.our_room .room {
     text-align: center;
     background-color: #647E6899;
     margin-bottom: 30px;
     transition: ease-in all 0.5s;
}

.our_room .room .room_img {
     overflow: hidden;
}

.our_room .room .room_img figure {
     margin: 0;
}

.our_room .room .room_img figure img {
     width: 100%;
     transition: all .5s;
}

.our_room .room .room_img figure img:hover {
     transform: scale(1.2);
}

.our_room .room .bed_room {
     padding: 20px 30px 20px 30px;
}

.our_room .room .bed_room h3 {
     color: #121212;
     font-size: 25px;
     line-height: 20px;
     font-weight: 500;
     transition: ease-in all 0.5s;
     margin: auto;
}

#serv_hover.room {
     box-shadow: 0px 0px 1px rgba(100, 126, 104, 0.85);
}

#serv_hover:hover.room {
     cursor: pointer;
     box-shadow: 0px 0px 30px rgba(100, 126, 104, 0.85);
     transition: ease-in all 0.5s;
}


/** end our_room section **/


/** gallery  section **/

.gallery {
     padding: 20px 0px 40px 0px;
     background-color: #D8D8D8;
}

.gallery .titlepage {
     text-align: center;
}

.gallery .gallery_img {
     overflow: hidden;
     margin-bottom: 30px;
}

.gallery .gallery_img figure {
     margin: 0;
}

.gallery .gallery_img figure img {
     width: 100%;
     transition: all .5s;
}

.gallery .gallery_img figure img:hover {
     transform: scale(1.2);
}


/** end gallery  section **/


/** blog section **/

.blog {
     background: url(../images/blog_bg.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     padding: 60px 0 30px 0;
     margin-top: 60px;
}

.blog .titlepage {
     text-align: center;
}

.blog .titlepage h2 {
     color: #647E6899;
}

.blog .titlepage p {
     color: #647E6899;
     font-size: 17px;
     margin-top: 20px;
}

.blog .blog_box {
     text-align: left;
     background-color: #647E6899;
     margin-bottom: 30px;
     transition: ease-in all 0.5s;
}

.blog .blog_box .blog_img {
     overflow: hidden;
}

.blog .blog_box .blog_img figure {
     margin: 0;
}

.blog .blog_box .blog_img figure img {
     width: 100%;
     transition: all .5s;
}

.blog .blog_box .blog_img figure img:hover {
     transform: scale(1.2);
}

.blog .blog_box .blog_room {
     padding: 33px 30px;
     text-align: left;
}

.blog .blog_box .blog_room h3 {
     color: #121212;
     font-size: 25px;
     line-height: 20px;
     font-weight: 500;
     padding-bottom: 5px;
     transition: ease-in all 0.5s;
     margin: auto;
}

.blog .blog_box .blog_room span {
     font-size: 15px;
     color: var(--high-blue);
     font-weight: bold;
     margin-bottom: 10px;
     display: block;
}

.blog .blog_box .blog_room p {
     font-size: 14px;
     line-height: 20px;
}


/** end blog section **/


/** contact section **/

.contact {
     background: #647E6861;
     padding: 50px 0px 50px 0px;
}

.main_form .contactus {
     border: #647E6899 solid 1px;
     padding: 0 15px;
     margin-bottom: 25px;
     width: 100%;
     height: 58px;
     background: #647E6899;
     color: var(--light-blue);
     font-size: 18px;
     font-weight: normal;
     box-shadow: 2px 0px 6px rgba(207, 255, 141, 0.20);
}
/* ... */

